2009-12-15 Markus Malkusch <markus@malkusch.de>

    * classes/InternalAutoloader.php (InternalAutoloader):
    Internal classes needed by the Autoloader itself are handled with
    the InternalAutolader.
    
    * classes/Autoloader.php (Autoloader::registerInternalClass())
    Autoloader::registerInternalClass() is deprecated and removed.
    InternalAutoloader::getInstance()->registerClass() is used instead.
    
    * classes/OldPHPAPI.php (OldPHPAPI::checkAPI())
    Some functions are missing in older PHP 5 APIs.
    If needed, these missing functions are implemented. 

2009-12-11 Markus Malkusch <markus@malkusch.de>

    * classes/Autoloader.php (Autoloader::setPath()):
    For each class path one single Autoloader instance is responsable.
    That allows to use individual configurations per class path and
    to reuse an index for common class paths in different projects.
    This is a major change which affects other classes and methods.

2009-12-10 Markus Malkusch <markus@malkusch.de>

    * classes/index/AutoloaderIndex.php (AutoloaderIndex::getContext()):
    Class paths are sorted for generating the context.
    
2009-12-09 Markus Malkusch <markus@malkusch.de>

    * classes/Autoloader.php (Autoloader::getNormalizeSearchPaths()):
    Class paths are normalized for searching. That means that class paths
    which are included in other class paths are removed.
    
2009-12-08 Markus Malkusch <markus@malkusch.de>

    * classes/Autoloader.php (Autoloader::searchPath()):
    Each searching for a class definition resets the max_execution_time.
    
    * classes/parser/AutoloaderFileParser.php (AutoloaderFileParser::isClassInFile()):
    The path for AutoloaderException_Parser_IO was wrong.
    
    * classes/parser/AutoloaderFileParser_Tokenizer.php (AutoloaderFileParser_Tokenizer::isClassInSource()):
    If the tokenizer fails it throws an AutoloaderException_Parser.
    
2009-11-29 Markus Malkusch <markus@malkusch.de>
